--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -2,8 +2,10 @@
 
 one:
   title: MyString
-  text: MyText
+  summary: MyText
+  body: MyText
 
 two:
   title: MyString
-  text: MyText
+  summary: MyText
+  body: MyText
